fix(Navbar): set the height so there wouldn't be any overlap

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -33,3 +33,7 @@ $theme-colors: (
 }
 // install bootsrtap
 @import "bootstrap/scss/bootstrap";
+
+.navBar{
+  height: 94px;
+}
